--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!doctype html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
@@ -22,4 +22,4 @@ async function init() {
 }
 </script>
 </body>
-</html>
+
