--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!doctype html>
 <h1> Hello! </h1>
-<!-- <!doctype html>
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
@@ -22,5 +22,5 @@ async function init() {
         .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+2});
 }
 </script>
-</body> -->
+</body>
 
