--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <h1> Hello! </h1>
 <script src='https://d3js.org/d3.v5.min.js'></script>
+<script> var svg = d3.select('svg'); </script>
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
 <svg width=300 height=300>
