--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<h1> Hello! </h1>
+<h1> CS416 Final Project - Fuel Consumption of Cars </h1>
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script> var svg = d3.select('svg'); </script>
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
@@ -9,18 +9,28 @@
 <script>
 async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,200]);
-    var y = d3.scaleLog().domain([10,150]).range([200,0])
+    var y = d3.scaleLog().domain([10,150]).range([200,0]);
     const data = await d3.csv("./cars2017.csv");
     console.log(data);
     svg.append("g")
-    .attr("transform","translate(50,50)")
-    .selectAll("circle")
-    .data(data)
-    .enter()
-    .append("circle")
-        .attr("cx", function(d) {return x(d.AverageCityMPG)})
-        .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
-        .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+2});
+      .attr("transform","translate(50,50)")
+      .selectAll("circle")
+      .data(data)
+      .enter()
+      .append("circle")
+          .attr("cx", function(d) {return x(d.AverageCityMPG)})
+          .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
+          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+2});
+    svg.append("g")
+        .attr("transform","translate(50,250)")
+        .call(d3.axisBottom(x))
+        .tickValue([10,20,50,100])
+        .tickFormat(d3.format("~s"));
+    svg.append("g")
+        .attr("transform","translate(50,50)")
+        .call(d3.axisLeft(y))
+        .tickValue([10,20,50,100])
+        .tickFormat(d3.format("~s"));
 }
 </script>
 </body>
