--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
-<svg width=300 height=300>
+<svg width=900 height=900>
 </svg>
 <script>
 async function init() {
@@ -21,15 +21,12 @@ async function init() {
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
           .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+2});
     d3.select('svg').append("g")
-        .attr("transform","translate(50,250)")
-        .call(d3.axisBottom(x))
-        .tickValue([10,20,50,100])
-        .tickFormat(d3.format("~s"));
-    d3.select('svg').append("g")
         .attr("transform","translate(50,50)")
-        .call(d3.axisLeft(y))
-        .tickValue([10,20,50,100])
-        .tickFormat(d3.format("~s"));
+        .call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
+
+    d3.select('svg').append("g")
+        .attr("transform","translate(50,250)")
+        .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 }
 </script>
 </body>
