--- a/first.html
+++ b/first.html
@@ -25,9 +25,12 @@ async function init() {
         .call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 
     d3.select('svg').append("g")
-        .attr("transform","translate(50,250)")
+        .attr("transform","translate(50,850)")
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 }
 </script>
+<button onclick="location.href = 'html/first.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
+<button onclick="location.href = 'html/second.html';" id="slide 2" class="float-left submit-button" >Slide 2</button>
+<button onclick="location.href = 'html/third.html';" id="slide 3" class="float-left submit-button" >Slide 3</button>
 </body>
 
