--- a/html/third.html
+++ b/html/third.html
@@ -29,7 +29,7 @@ async function init() {
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 }
 </script>
-<button onclick="location.href = 'html/first.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
+<button onclick="location.href = 'index.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
 <button onclick="location.href = 'html/second.html';" id="slide 2" class="float-left submit-button" >Slide 2</button>
 <button onclick="location.href = 'html/third.html';" id="slide 3" class="float-left submit-button" >Slide 3</button>
 </body>
