--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <body onload='init()'>
 <svg width=900 height=900>
 </svg>
+<a href="html/second.html"><button>Slide 2</button></a>
+<button onclick="location.href = 'index.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
+<button onclick="location.href = 'html/second.html';" id="slide 2" class="float-left submit-button" >Slide 2</button>
+<button onclick="location.href = 'html/third.html';" id="slide 3" class="float-left submit-button" >Slide 3</button>
 <script>
 async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
@@ -29,8 +33,6 @@ async function init() {
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 }
 </script>
-<button onclick="location.href = 'index.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
-<button onclick="location.href = 'html/second.html';" id="slide 2" class="float-left submit-button" >Slide 2</button>
-<button onclick="location.href = 'html/third.html';" id="slide 3" class="float-left submit-button" >Slide 3</button>
+
 </body>
 
