--- a/html/second.html
+++ b/html/second.html
@@ -3,13 +3,16 @@
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(61, 223, 88); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
+<a href="index.html"><button>Slide 1</button></a>
+<a href="html/second.html"><button>Slide 2</button></a>
+<a href="html/third.html"><button>Slide 3</button></a>
 <svg width=900 height=900>
 </svg>
 <script>
 async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
-    const data = await d3.csv("./cars2017.csv");
+    const data = await d3.csv("../cars2017.csv");
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
@@ -29,7 +32,4 @@ async function init() {
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 }
 </script>
-<button onclick="location.href = 'index.html';" id="slide 1" class="float-left submit-button" >Slide 1</button>
-<button onclick="location.href = 'html/second.html';" id="slide 2" class="float-left submit-button" >Slide 2</button>
-<button onclick="location.href = 'html/third.html';" id="slide 3" class="float-left submit-button" >Slide 3</button>
 </body>
