--- a/html/third.html
+++ b/html/third.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <h1> CS416 Final Project - Fuel Consumption of Cars </h1>
+<p>Fuel-efficient cars emit less pollution over the same amount of distance traveled.<br>
+    They also cost less to operate. Buying a more fuel-efficient car can save you thousands<br>
+     of dollars on fuel costs over time and can often balance out a higher purchase price <br>
+     if you keep the car long enough.</p><br>
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(61, 210, 223); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
 <a href="index.html"><button>Slide 1</button></a>
 <a href="html/second.html"><button>Slide 2</button></a>
-<a href="html/third.html"><button>Slide 3</button></a>
+<a href="html/third.html"><button>Slide 3</button></a><br>
 <svg width=900 height=900>
 </svg>
 <script>
