--- a/html/third.html
+++ b/html/third.html
@@ -7,9 +7,9 @@
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <style> circle {fill: rgb(61, 210, 223); stroke: rgb(160, 0, 0);} </style>
 <body onload='init()'>
-<a href="index.html"><button>Slide 1</button></a>
-<a href="html/second.html"><button>Slide 2</button></a>
-<a href="html/third.html"><button>Slide 3</button></a><br>
+    <a href="../index.html"><button>Slide 1</button></a>
+    <a href="./second.html"><button>Slide 2</button></a>
+    <a href="./third.html"><button>Slide 3</button></a><br>
 <svg width=900 height=900>
 </svg>
 <script>
