--- a/html/second.html
+++ b/html/second.html
@@ -21,7 +21,7 @@ async function init() {
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
-      .selectAll("circle").filter
+      .selectAll("circle")
       .data(data)
       .enter()
       .append("circle")
