--- a/html/second.html
+++ b/html/second.html
@@ -18,6 +18,7 @@ async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
     const data = await d3.csv("../cars2017.csv");
+    var color = d3.scaleOrdinal().domain(data.EngineCylinders).range(d3.schemeSet3);
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
@@ -28,7 +29,7 @@ async function init() {
           .attr("cx", function(d) {return x(d.AverageCityMPG)})
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
           .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2})
-          .style("fill", function(d) { return rgb(Number.parseInt(d.EngineCylinders)*2,Number.parseInt(d.EngineCylinders)*4,Number.parseInt(d.EngineCylinders)*6); })
+          .style("fill", function(d) { return color(d.EngineCylinders); })
 	      .on("mouseover", function(d){
         	  d3.selectAll('circle')
             	   .filter(function(c){return (c.EngineCylinders != d.EngineCylinders)})
