--- a/html/third.html
+++ b/html/third.html
@@ -18,6 +18,7 @@ async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
     const data = await d3.csv("../cars2017.csv");
+    var color = d3.scaleOrdinal().domain(["Gasoline","Electricity","Diesel"]).range(d3.schemeSet3);
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
@@ -27,7 +28,20 @@ async function init() {
       .append("circle")
           .attr("cx", function(d) {return x(d.AverageCityMPG)})
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
-          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2});
+          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2})
+          .style("fill", function(d){return color(d.Fuel)})
+          .on("mouseover", function(d){
+        	  d3.selectAll('circle')
+            	   .filter(function(c){return (c.Fuel != d.Fuel)})
+                   .transition()
+                   .style("opacity", 0.01)
+          })
+            .on("mouseout", function(d){
+               d3.selectAll('circle')
+                .filter(function(c){return (c.Fuel != d.Fuel)})
+                .transition()
+                .style("opacity", 1)
+          });
     d3.select('svg').append("g")
         .attr("transform","translate(50,50)")
         .call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
