--- a/html/second.html
+++ b/html/second.html
@@ -5,14 +5,24 @@
      of dollars on fuel costs over time and can often balance out a higher purchase price <br>
      if you keep the car long enough.</p><br>
 <script src='https://d3js.org/d3.v5.min.js'></script>
-<style> circle {fill: rgb(61, 223, 88); stroke: rgb(160, 0, 0);} </style>
+<style> circle {fill: rgb(61, 223, 88); stroke: rgb(71, 62, 62);} </style>
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+</style>
+
 <body onload='init()'>
+
+<div>
 <a href="../index.html"><button>Slide 1</button></a>
 <a href="./second.html"><button>Slide 2</button></a>
-<a href="./third.html"><button>Slide 3</button></a><br>
+<a href="./third.html"><button>Slide 3</button></a>
 <a href="./third.html"><button>Next</button></a><br>
-<svg width=900 height=900>
-</svg>
+</div>
+
+<div><svg width=900 height=900></svg></div>
+
 <script>
 async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
