--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!doctype html>
+
 <h1> CS416 Final Project - Fuel Consumption of Cars </h1>
+
 <p>Fuel-efficient cars emit less pollution over the same amount of distance traveled.<br>
 They also cost less to operate. Buying a more fuel-efficient car can save you thousands<br>
  of dollars on fuel costs over time and can often balance out a higher purchase price <br>
  if you keep the car long enough.</p><br>
+
 <script src='https://d3js.org/d3.v5.min.js'></script>
+
 <style> circle {fill: rgb(223, 63, 61); stroke: rgb(160, 0, 0);} </style>
+
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+</style>
+
 <body onload='init()'>
-<a href="index.html"><button>Slide 1</button></a>
-<a href="html/second.html"><button>Slide 2</button></a>
-<a href="html/third.html"><button>Slide 3</button></a><br>
-<a href="html/second.html"><button>Next</button></a>
-<svg width=900 height=900>
-</svg>
+
+<div>
+    <a href="index.html"><button>Slide 1</button></a>
+    <a href="html/second.html"><button>Slide 2</button></a>
+    <a href="html/third.html"><button>Slide 3</button></a>
+    <a href="html/second.html"><button>Next</button></a><br>
+</div>
+
+<div><svg width=900 height=900></svg></div>
+
 <script>
 async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
