--- a/html/second.html
+++ b/html/second.html
@@ -28,7 +28,8 @@ async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
     const data = await d3.csv("../cars2017.csv");
-    var color = d3.scaleOrdinal().domain([2,4,6,8,10,12,14]).range(d3.schemeSet3);
+    var fueltype = [0,2,3,4,6,8,10,12];
+    var color = d3.scaleOrdinal().domain(fueltype).range(d3.schemeSet3);
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
@@ -59,6 +60,22 @@ async function init() {
     d3.select('svg').append("g")
         .attr("transform","translate(50,850)")
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
+
+    legend = d3.svg.legend().labelFormat("none").cellPadding(5).orientation("vertical")
+                .units("#of Engine Cylinders").cellWidth(30).cellHeight(40).inputScale(color).cellStepping(10);
+
+    d3.select("svg").append("g").attr("transform", "translate(50,140)").attr("class", "legend").call(legend);
+
+}
+</script>
+</footer>
+</body>
+</html>
+
+    d3.select("svg").append("g")
+        .attr("class", "legend")
+        .attr("transform","translate(850,50)")
+        
 }
 </script>
 </body>
