--- a/html/second.html
+++ b/html/second.html
@@ -61,10 +61,22 @@ async function init() {
         .attr("transform","translate(50,850)")
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
 
-    legend = d3.svg.legend().labelFormat("none").cellPadding(5).orientation("vertical")
-                .units("#of Engine Cylinders").cellWidth(30).cellHeight(40).inputScale(color).cellStepping(10);
-
-    d3.select("svg").append("g").attr("transform", "translate(50,140)").attr("class", "legend").call(legend);
+    d3.select("svg").append("g")
+        .attr("transform", "translate(820, 50)")
+        .selectAll("rect")
+        .data(fueltype)
+        .enter()
+        .append("rect")
+            .attr("x", 0).attr("y", function(d,i){return 20*(i+1)})
+            .attr("width", 30).attr("height", 40);
+    d3.select("svg").append("g")
+        .attr("transform", "translate(850, 50)")
+        .selectAll("text")
+        .data(fueltype)
+        .enter()
+        .append("text")
+            .attr("x", 0).attr("y", function(d,i){return 20*(i+1)})
+            .text(function(d){return d});
 
 }
 </script>
