--- a/html/third.html
+++ b/html/third.html
@@ -27,7 +27,8 @@ async function init() {
     var x = d3.scaleLog().domain([10,150]).range([0,800]);
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
     const data = await d3.csv("../cars2017.csv");
-    var color = d3.scaleOrdinal().domain(["Gasoline","Electricity","Diesel"]).range(d3.schemeSet3);
+    var fueltype = ["Gasoline","Electricity","Diesel"];
+    var color = d3.scaleOrdinal().domain(fueltype).range(d3.schemeSet3);
     console.log(data);
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
@@ -58,6 +59,23 @@ async function init() {
     d3.select('svg').append("g")
         .attr("transform","translate(50,850)")
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
+
+    d3.select("svg").append("g")
+        .attr("transform", "translate(820, 47)")
+        .selectAll("rect")
+        .data(fueltype)
+        .enter()
+        .append("rect")
+            .attr("x", 0).attr("y", function(d,i){return 20*(i+1)})
+            .attr("width", 30).attr("height", 17).attr("fill", function(d){return color(d)});
+    d3.select("svg").append("g")
+        .attr("transform", "translate(850, 50)")
+        .selectAll("text")
+        .data(fueltype)
+        .enter()
+        .append("text")
+            .attr("x", 0).attr("y", function(d,i){return 20*(i+1)})
+            .text(function(d){return d});
 }
 </script>
 </body>
