--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ async function init() {
     var y = d3.scaleLog().domain([10,150]).range([800,0]);
     const data = await d3.csv("./cars2017.csv");
     console.log(data);
+    //scatterplot
     d3.select('svg').append("g")
       .attr("transform","translate(50,50)")
       .selectAll("circle")
@@ -42,7 +43,20 @@ async function init() {
       .append("circle")
           .attr("cx", function(d) {return x(d.AverageCityMPG)})
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
-          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2});
+          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2})
+          .on("mouseover", function(d){
+        	  d3.selectAll('text').data(d).enter().append("text")
+                .attr("x", function(t) {return x(t.AverageCityMPG)}).attr("y", function(d) {return y(d.AverageHighwayMPG)})
+                .text(function(d){return d});
+          })
+            .on("mouseout", function(d){
+               d3.selectAll('circle')
+                .filter(function(c){return (c.EngineCylinders != d.EngineCylinders)})
+                .transition()
+                .style("opacity", 1)
+          });
+    
+    //legend
     d3.select('svg').append("g")
         .attr("transform","translate(50,50)")
         .call(d3.axisLeft(y).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
