--- a/html/second.html
+++ b/html/second.html
@@ -41,7 +41,7 @@ async function init() {
       .append("circle")
           .attr("cx", function(d) {return x(d.AverageCityMPG)})
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
-          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2})
+          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+4})
           .style("fill", function(d) { return color(d.EngineCylinders); })
 	      .on("mouseover", function(d){
         	  d3.selectAll('circle')
