--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ async function init() {
       .append("circle")
           .attr("cx", function(d) {return x(d.AverageCityMPG)})
           .attr("cy", function(d) {return y(d.AverageHighwayMPG)})
-          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)*2});
+          .attr("r", function(d) {return Number.parseInt(d.EngineCylinders)+4});
     //Annotation
     d3.select('svg').append("g")
         .attr("transform","translate(50,50)")
