--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ They also cost less to operate. Buying a more fuel-efficient car can save you th
 <body onload='init()'>
 
 <div>
-    <a href="index.html"><button>Slide 1</button></a>
+    <div class="button" style="background-color:rgb(124, 124, 124);"> Slide 1 </div>
     <a href="html/second.html"><button>Slide 2</button></a>
     <a href="html/third.html"><button>Slide 3</button></a>
     <a href="html/second.html"><button>Next</button></a><br>
