--- a/html/third.html
+++ b/html/third.html
@@ -17,7 +17,7 @@
 <div>
 <a href="../index.html"><button>Slide 1</button></a>
 <a href="./second.html"><button>Slide 2</button></a>
-<div class="button" style="background-color:rgb(124, 124, 124);"> Slide 3 </div>
+<a href="./third.html"><button>Slide 3</button></a>
 <a href="../index.html"><button>Home</button></a><br>
 
 </div>
