--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ They also cost less to operate. Buying a more fuel-efficient car can save you th
 <body onload='init()'>
 
 <div>
-    <div class="button" style="background-color:rgb(124, 124, 124);"> Slide 1 </div>
+    <a href="index.html"><button>Slide 1</button></a>
     <a href="html/second.html"><button>Slide 2</button></a>
     <a href="html/third.html"><button>Slide 3</button></a>
     <a href="html/second.html"><button>Next</button></a><br>
@@ -70,9 +70,9 @@ async function init() {
           });
 
     d3.select("svg").append("g")
-        .attr("transform","translate(350,50)")
+        .attr("transform","translate(350,100)")
         .append("text")
-          .attr("x", 0).attr("y",0).text("hover mouse over data points to see detail");
+          .attr("x", 0).attr("y",0).text("hover mouse over \n data points \n to see detail");
         
     
     //xy axis
