--- a/html/third.html
+++ b/html/third.html
@@ -63,6 +63,10 @@ async function init() {
         .append("text")
           .attr("x", 0).attr("y",0).text("hover mouse over data points to see filtered data");
     d3.select("svg").append("g")
+        .attr("transform","translate(350,100)")
+        .append("rect")
+          .attr("x", 0).attr("y",0).attr("width", 100).attr("height",20);
+    d3.select("svg").append("g")
         .attr("transform","translate(750,750)")
         .append("text")
           .attr("x", 0).attr("y",0).text("cars clustered by fuel type");
@@ -70,6 +74,10 @@ async function init() {
         .attr("transform","translate(750,770)")
         .append("text")
           .attr("x", 0).attr("y",0).text("cars using electricity are much more efficient than the others");
+    d3.select("svg").append("g")
+        .attr("transform","translate(550,550)")
+        .append("rect")
+          .attr("x", 0).attr("y",0).attr("width", 100).attr("height",40);
         
     //xy axis
     d3.select('svg').append("g")
@@ -82,7 +90,7 @@ async function init() {
 
     //legend
     d3.select("svg").append("g")
-        .attr("transform", "translate(220, 40)")
+        .attr("transform", "translate(120, 40)")
         .selectAll("rect")
         .data(engine)
         .enter()
@@ -90,7 +98,7 @@ async function init() {
             .attr("x", 0).attr("y", function(d,i){return 20*(i+1)})
             .attr("width", 30).attr("height", 17).attr("fill", function(d){return color(d)});
     d3.select("svg").append("g")
-        .attr("transform", "translate(250, 50)")
+        .attr("transform", "translate(150, 50)")
         .selectAll("text")
         .data(engine)
         .enter()
