--- a/html/second.html
+++ b/html/second.html
@@ -61,9 +61,9 @@ async function init() {
         .append("text")
           .attr("x", 0).attr("y",0).text("hover mouse over \n data points \n to see filtered data");
     d3.select("svg").append("g")
-        .attr("transform","translate(350,100)")
+        .attr("transform","translate(330,80)")
         .append("rect")
-          .attr("x", 0).attr("y",0).attr("width", 100).attr("height",20);
+          .attr("x", 0).attr("y",0).attr("width", 400).attr("height",25).attr("fill","none").attr('stroke', 'black');
     d3.select("svg").append("g")
         .attr("transform","translate(550,550)")
         .append("text")
@@ -73,9 +73,9 @@ async function init() {
         .append("text")
           .attr("x", 0).attr("y",0).text("cars with fewer engine cylinder \n are more efficient");
     d3.select("svg").append("g")
-        .attr("transform","translate(550,550)")
+        .attr("transform","translate(540,530)")
         .append("rect")
-          .attr("x", 0).attr("y",0).attr("width", 100).attr("height",40);
+          .attr("x", 0).attr("y",0).attr("width", 300).attr("height",40).attr("fill","none").attr('stroke', 'black');
     
     //xy axis
     d3.select('svg').append("g")
