--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ async function init() {
         .append("text")
           .attr("x", 0).attr("y",0).text("hover mouse over \n data points \n to see detail");
     d3.select("svg").append("g")
-        .attr("transform","translate(350,100)")
+        .attr("transform","translate(330,80)")
         .append("rect")
-          .attr("x", 0).attr("y",0).attr("width", 100).attr("height",20);
+          .attr("x", 0).attr("y",0).attr("width", 400).attr("height",25).attr("fill","none").attr('stroke', 'black');
         
     
     //xy axis
