--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <p>Fuel-efficient cars emit less pollution over the same amount of distance traveled.<br>
 They also cost less to operate. Buying a more fuel-efficient car can save you thousands<br>
  of dollars on fuel costs over time and can often balance out a higher purchase price <br>
- if you keep the car long enough.</p><br>
+ if you keep the car long enough.  Fuel efficiency can be shown by gallons of fuel used <br>
+per mile of traveling (miles per gallon or mpg).  The plot shows city mpg vs. highway mpg</p><br>
 
 <script src='https://d3js.org/d3.v5.min.js'></script>
 
@@ -87,6 +88,14 @@ async function init() {
     d3.select('svg').append("g")
         .attr("transform","translate(50,850)")
         .call(d3.axisBottom(x).tickValues([10, 20, 50, 100]).tickFormat(d3.format("~s")));
+ 
+    d3.select('svg').append('g')
+        .attr("transform", "translate(40,50)")
+        .append("text").attr("transform", "rotate(-90)").text("Average Highway MPG");
+ 
+    d3.select('svg').append('g')
+        .attr("transform", "translate(800,870)")
+        .append("text").text("Average City MPG");
 }
 </script>
 
